--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.4.6/dist/js/uikit.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.4.6/dist/js/uikit-icons.min.js"></script> 
   
-    <title>React App</title>
+    <title>SkillHerit</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
